--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.marginleft{
+    margin-left: 82%;
+    margin-right: 20px;
+    margin-top: 20px;
+    
+}
+
+.margin{
+    margin-left: 70%;
+}
